# options-arbitrage-system

./: .cron-state.json  .env.template  .gitignore  DEPLOY_TRIGGER.md  Procfile  README.md  alembic.ini  ecosystem.config.cjs  overview.md  pyproject.toml  requirements.txt  run_signal.py  trading_system.db-shm  verify_n_structure.py
config/: __init__.py  contracts.py  logging_config.py  settings.py  symbol_data.py
core/: __init__.py  db.py  market_calendar.py  position_tracker.py  risk_manager.py  schema.py
data/: __init__.py  futures_collector.py  iv_recorder.py  options_collector.py
docs/: K线时间戳校验报告.md  b3-skeleton-assessment.md  class-diagram.mermaid  diagnosis-night-session.md  diagnostic-scan-report.md  kline_pipeline_analysis.md  macd-data-analysis.md  plan-1min-kline.md  plan-b3-skeleton-loading.md  plan-dashboard.md  plan-deployment-check.md  plan-discord-alerts.md  plan-free-tier.md  plan-greeks-cash.md  plan-macd-relaxation.md  plan-manual-payment-fallback.md  plan-n-structure-algorithm.md  plan-n-structure-all-cycles.md  plan-n-structure-annotation-inconsistency.md  plan-n-structure-audit.md  plan-n-structure-dynamic-refresh.md  plan-n-structure-fix.md  plan-n-structure-p0-complete.md  plan-n-structure-p0.md  plan-n-structure-refresh.md  plan-n-structure-verify.md  plan-nstructure-fix.md  plan-options-panel-uiux-fix.md  plan-options-roadmap.md  plan-options-system.md  plan-p0-fixes.md  plan-p0-n-structure-algorithm.md  plan-p0-n-structure-fix.md  plan-p0-n-structure.md  plan-p0-verify-fix.md  plan-p1-options-ui-ux.md  plan-p1-options-uiux.md  (+21 more)
web/: app.py  (+9 more)
(+197 files in other folders)
