[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "options-futures-system"
version = "0.1.0"
description = "期货N型信号 + 商品期权套利 双引擎交易信号平台"
readme = "overview.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Auto Company"},
]
dependencies = [
    "akshare>=1.14.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "flask>=3.0.0",
    "pytest>=8.0.0",
    'tzdata; platform_system == "Windows"',
]

[project.urls]
Homepage = "https://github.com/DrfterX/options-arbitrage-system"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "config", "config.*",
    "core", "core.*",
    "data", "data.*",
    "futures", "futures.*",
    "options", "options.*",
    "signals", "signals.*",
    "pipeline", "pipeline.*",
    "web", "web.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]